gnu/**/*.java, kawa/**/*.java: Fix Java17 depreciation warnings.
Mostly like 'new Double(x)' -> 'Double.valueOf(x)'.